Fixes spacing in home_page background picture. Adds smaller images.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -313,8 +313,8 @@ figure.figure {
   }
 }
 .home-page {
-  background-image: url("angkor wat_5.png");
-  background-position-y: 0;
+  background-image: url("angkor wat_7.png");
+  background-position: center;
   background-color: #292929;
 }
 
